module(name = "krpc")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

maven_jar = use_repo_rule("//tools/build:maven.bzl", "maven_jar")

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "2.0.3")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "protobuf", version = "35.1")
bazel_dep(name = "rules_dotnet", version = "0.22.1")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.422")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//tools/build/python:requirements_lock.txt",
)
use_repo(pip, "pypi")

http_archive(
    name = "com_google_googletest",
    sha256 = "65fab701d9829d38cb77c14acdc431d2108bfdbf8979e40eb8ae567edf10b27c",
    strip_prefix = "googletest-1.17.0",
    url = "https://github.com/google/googletest/archive/refs/tags/v1.17.0.tar.gz",
)

# ----------------------- Protobuf Compiler ----------------------------------------------

http_archive(
    name = "protoc_linux_x86_32",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "5bc75055633c906881c2c32de927d160ec415d0de70ed0a3acc3dd4fed0427b8",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v35.1/protoc-35.1-linux-x86_32.zip",
)

http_archive(
    name = "protoc_linux_x86_64",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "6930ebf62bd4ea607b98fff052596c6ee564b9835b4ce172c75a3f53ae9d91b7",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v35.1/protoc-35.1-linux-x86_64.zip",
)

http_archive(
    name = "protoc_osx_x86_64",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "537d73604a344ded6fc94e98e07e529d4fe3e4a0b09e59905353950fafc2a1f7",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v35.1/protoc-35.1-osx-x86_64.zip",
)

http_archive(
    name = "protoc_win32",
    build_file_content = "exports_files(['bin/protoc.exe'])",
    sha256 = "e0c1b5be94c0de8ecd1f4d509bdfb344e6464e68ada27c039113dd474b318c51",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v35.1/protoc-35.1-win32.zip",
)

http_archive(
    name = "protoc_unity_linux_x86_32",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "d047b4b4a5ac424d7e8a58912a5712195d2ea31570a4d95bb21cf9b19c6bb0b9",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protoc-3.10.1-linux-x86_32.zip",
)

http_archive(
    name = "protoc_unity_linux_x86_64",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "0c97a75c8f8fafc55323599053626a0a822e5b66299f6643a2b086f859b56afd",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protoc-3.10.1-linux-x86_64.zip",
)

http_archive(
    name = "protoc_unity_osx_x86_64",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "ee3f4051e55830596729efe48183218bdb44cf2f83b188460859bd63b2a09576",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protoc-3.10.1-osx-x86_64.zip",
)

http_archive(
    name = "protoc_unity_win32",
    build_file_content = "exports_files(['bin/protoc.exe'])",
    sha256 = "964f055db26372e46d8232a09fe6d661de3ca1b82fbbc1ede33696b1e379a11b",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protoc-3.10.1-win32.zip",
)

http_archive(
    name = "protoc_nanopb",
    build_file_content = "filegroup(name = 'plugin', srcs = glob(['generator/**']), visibility = ['//visibility:public'])",
    sha256 = "951a9ab2385424a4cdf245d0c84f4c88c6ccbc65a0dade4b246d50c068f24128",
    strip_prefix = "nanopb-0.4.9.1-linux-x86",
    url = "https://jpa.kapsi.fi/nanopb/download/nanopb-0.4.9.1-linux-x86.tar.gz",
)

http_archive(
    name = "protoc_lua",
    build_file_content = """
filegroup(
    name = 'plugin',
    srcs = [
        'protoc-plugin/protoc-gen-lua'
    ],
    visibility = ['//visibility:public']
)""",
    sha256 = "28f4daa026effb81cebfdf580b0fc5732e520c0f4ade53e940052d89cddf4264",
    strip_prefix = "protobuf-lua-1.1.2",
    url = "https://github.com/djungelorm/protobuf-lua/archive/v1.1.2.tar.gz",
)

# ----------------------- C# dependencies ------------------------------------------------

http_archive(
    name = "csharp_protobuf",
    build_file_content = "exports_files(['lib/net45/Google.Protobuf.dll', 'lib/net5.0/Google.Protobuf.dll'])",
    sha256 = "6ba51589915e3640e1ffdd384863dd0d73f0ca6a8aac591ec81c42c6a3ee55ce",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Google.Protobuf/3.35.1",
)

# Note: KSP's version of Unity does not include ReadOnlySpan and others, which are required
# by Google.Protobuf after v3.10.1, so we pin it to this version
http_archive(
    name = "csharp_protobuf_unity",
    build_file_content = "exports_files(['lib/net45/Google.Protobuf.dll'])",
    sha256 = "17eb7c37e702750d3aa53823571be7662a87a2111c6b2c844ba1c20641424084",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Google.Protobuf/3.10.1",
)

http_archive(
    name = "csharp_system_memory",
    build_file_content = "exports_files(['lib/net462/System.Memory.dll'])",
    sha256 = "26078aeb758c9ae985e8bf851f973026061da6a5eb4837204d0c2d2204c72955",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/System.Memory/4.6.3",
)

http_archive(
    name = "csharp_system_threading_tasks_extensions",
    build_file_content = "exports_files(['lib/net462/System.Threading.Tasks.Extensions.dll'])",
    sha256 = "1abc92c7517a021ead7e79d0b7f3c70be75bce0fac7cfe3b38e157d32245ff1a",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/System.Threading.Tasks.Extensions/4.6.3",
)

http_archive(
    name = "csharp_system_runtime_compilerservices_unsafe",
    build_file_content = "exports_files(['lib/net462/System.Runtime.CompilerServices.Unsafe.dll'])",
    sha256 = "5f6a7f53af3465f92beb6da873ebe0e496206c313313b98badee4355a6b25937",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/System.Runtime.CompilerServices.Unsafe/6.1.2",
)

http_file(
    name = "csharp_krpc_io_ports",
    downloaded_file_path = "KRPC.IO.Ports.dll",
    sha256 = "558b0c1649fbc44b518d9de8957fe30e7c9c42d73c62d63d165f6f136fab3ec5",
    url = "https://github.com/krpc/krpc-io-ports/releases/download/v1.0.0/KRPC.IO.Ports.dll",
)

http_file(
    name = "csharp_krpc_io_ports_license",
    downloaded_file_path = "LICENSE.KRPC.IO.Ports",
    sha256 = "a6b8912947cb14e02cefb704859d12a03d3c8792344fcf5831ef27c1efcd6d20",
    url = "https://raw.githubusercontent.com/krpc/krpc-io-ports/master/LICENSE",
)

http_archive(
    name = "csharp_moq",
    build_file_content = "exports_files(['lib/net462/Moq.dll', 'lib/net6.0/Moq.dll'])",
    sha256 = "fae01cffac6dce28fd627999ae167073ee2f520c7a729a59b164258b708643ca",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Moq/4.20.72",
)

http_archive(
    name = "csharp_castle_core",
    build_file_content = "exports_files(['lib/net462/Castle.Core.dll', 'lib/net6.0/Castle.Core.dll'])",
    sha256 = "b8d7bffcf0a76062e1c714292c3c9342ea081f9bbb7460e5ca3736c2a010e03e",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Castle.Core/5.2.1",
)

http_archive(
    name = "csharp_json",
    build_file_content = "exports_files(['lib/net45/Newtonsoft.Json.dll', 'lib/net6.0/Newtonsoft.Json.dll'])",
    sha256 = "f09081d457405baf35a973fa0c50d6bf272ed683f2568c5a620a49da952f6529",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Newtonsoft.Json/13.0.4",
)

# System.IO.Ports is the serial port implementation used on modern .NET
# (net8.0 builds of the server core and TestServer). The mod's net472 build
# uses KRPC.IO.Ports, as mono inside KSP has no System.IO.Ports support.
http_archive(
    name = "csharp_system_io_ports",
    build_file_content = "exports_files(['lib/net8.0/System.IO.Ports.dll', 'runtimes/unix/lib/net8.0/System.IO.Ports.dll', 'runtimes/win/lib/net8.0/System.IO.Ports.dll'])",
    sha256 = "1bc8fd7347ab07365f2405655b4f17a04e7c80f862356244efcb056815767b84",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/System.IO.Ports/8.0.0",
)

http_archive(
    name = "csharp_system_io_ports_native_linux_x64",
    build_file_content = "exports_files(['runtimes/linux-x64/native/libSystem.IO.Ports.Native.so'])",
    sha256 = "e38a2e8d21e1734365d960af2d891272b032a8d0256c67ce9e5ccfc02a1fc250",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.linux-x64.runtime.native.System.IO.Ports/8.0.0",
)

http_archive(
    name = "csharp_options",
    build_file_content = "exports_files(['lib/NDesk.Options.dll'])",
    sha256 = "0fa76d0ed1eb9fba757b0aa677903e1b8873735eec136a51dde24eda57d10c61",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/NDesk.Options/0.2.1",
)

# ----------------------- C++ dependencies -----------------------------------------------

http_archive(
    name = "cpp_asio",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = 'asio',
    hdrs = glob(['include/*', 'include/**/*']),
    includes = ['include'],
    visibility = ['//visibility:public']
)
""",
    sha256 = "5cf78ede456fd13b95fe692711f4f689be26c826f1f5541c7a1df3aa32bd9dbd",
    strip_prefix = "asio-asio-1-38-0",
    url = "https://github.com/chriskohlhoff/asio/archive/refs/tags/asio-1-38-0.tar.gz",
)

http_archive(
    name = "cpp_googletest",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = 'gtest',
    srcs = glob(['googletest/src/*.cc'], exclude = ['googletest/src/gtest-all.cc']),
    hdrs = glob(['**/*.h', 'googletest/src/*.cc']),
    includes = [
        './',
        'googletest',
        'googletest/include',
        'include'
    ],
    linkopts = ['-pthread'],
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gmock',
    srcs = glob(['googlemock/src/*.cc'], exclude = ['googlemock/src/gmock-all.cc']),
    hdrs = glob(['**/*.h', 'googlemock/src/*.cc']),
    includes = [
        './',
        'googlemock',
        'googlemock/include',
        'include'
    ],
    deps = [':gtest'],
    linkopts = ['-pthread'],
    visibility = ['//visibility:public'],
)
""",
    sha256 = "65fab701d9829d38cb77c14acdc431d2108bfdbf8979e40eb8ae567edf10b27c",
    strip_prefix = "googletest-1.17.0",
    url = "https://github.com/google/googletest/archive/refs/tags/v1.17.0.tar.gz",
)

# ----------------------- C-nano dependencies --------------------------------------------

http_archive(
    name = "c_nanopb",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files([
    'LICENSE.txt', 'pb.h', 'pb_common.h', 'pb_common.c', 'pb_encode.h', 'pb_encode.c', 'pb_decode.h', 'pb_decode.c'
])

cc_library(
    name = 'nanopb',
    srcs = ['pb.h', 'pb_common.h', 'pb_common.c', 'pb_encode.h', 'pb_encode.c', 'pb_decode.h', 'pb_decode.c'],
    hdrs = ['pb.h', 'pb_common.h', 'pb_encode.h', 'pb_decode.h'],
    includes = ['./'],
    include_prefix = 'krpc_cnano', # FIXME: don't do this here
    visibility = ['//visibility:public']
)

filegroup(
    name = 'srcs',
    srcs = glob(['*.h', '*.c']),
    visibility = ['//visibility:public']
)
""",
    sha256 = "951a9ab2385424a4cdf245d0c84f4c88c6ccbc65a0dade4b246d50c068f24128",
    strip_prefix = "nanopb-0.4.9.1-linux-x86",
    url = "https://jpa.kapsi.fi/nanopb/download/nanopb-0.4.9.1-linux-x86.tar.gz",
)

# ----------------------- Java dependencies ----------------------------------------------

maven_jar(
    name = "java_protobuf",
    artifact = "com.google.protobuf:protobuf-java:4.35.1",
    sha256 = "a4345ba2aa009912ff6f90467fea2d104605256b72c50840d75f13256638a472",
)

maven_jar(
    name = "java_junit",
    artifact = "junit:junit:4.13.2",
    sha256 = "8e495b634469d64fb8acfa3495a065cbacc8a0fff55ce1e31007be4c16dc57d3",
)

maven_jar(
    name = "java_hamcrest",
    artifact = "org.hamcrest:hamcrest:3.0",
    sha256 = "5d66b6a4a680755cb6ed7cb104fa7835ef644667586ff0737adeb977c39ecdbc",
)

maven_jar(
    name = "java_checkstyle",
    artifact = "com.puppycrawl.tools:checkstyle:10.26.1",
    sha256 = "231f1fab0e44e87118ab26c6624e99a8d5148793411aab9e21428552fc1e91b7",
)

maven_jar(
    name = "java_apache_commons_beanutils",
    artifact = "commons-beanutils:commons-beanutils:1.11.0",
    sha256 = "9e44ba68ec9a3f21286fa2a8bbb003b735c0f69101bb43144b79f4f8aaa74709",
)

maven_jar(
    name = "java_apache_commons_collections",
    artifact = "commons-collections:commons-collections:3.2.2",
    sha256 = "eeeae917917144a68a741d4c0dff66aa5c5c5fd85593ff217bced3fc8ca783b8",
)

maven_jar(
    name = "java_apache_commons_logging",
    artifact = "commons-logging:commons-logging:1.3.6",
    sha256 = "f8ead8943401081dea0aa824b5b1ba40a0e4ed297a572a0f02258150a0b62357",
)

maven_jar(
    name = "java_antlr4_runtime",
    artifact = "org.antlr:antlr4-runtime:4.13.2",
    sha256 = "dd3e8a13a2d669bf84fb8d834de35ce4875f27157698d206241ec8488aadcaf7",
)

maven_jar(
    name = "java_guava",
    artifact = "com.google.guava:guava:33.4.8-jre",
    sha256 = "f3d7f57f67fd622f4d468dfdd692b3a5e3909246c28017ac3263405f0fe617ed",
)

maven_jar(
    name = "java_guava_failureaccess",
    artifact = "com.google.guava:failureaccess:1.0.3",
    sha256 = "cbfc3906b19b8f55dd7cfd6dfe0aa4532e834250d7f080bd8d211a3e246b59cb",
)

maven_jar(
    name = "java_picocli",
    artifact = "info.picocli:picocli:4.7.7",
    sha256 = "f86e30fffd10d2b13b8caa8d4b237a7ee61f2ffccf5b1941de718b765d235bf8",
)

maven_jar(
    name = "java_reflections",
    artifact = "org.reflections:reflections:0.10.2",
    sha256 = "938a2d08fe54050d7610b944d8ddc3a09355710d9e6be0aac838dbc04e9a2825",
)

maven_jar(
    name = "java_javassist",
    artifact = "org.javassist:javassist:3.28.0-GA",
    sha256 = "57d0a9e9286f82f4eaa851125186997f811befce0e2060ff0a15a77f5a9dd9a7",
)

maven_jar(
    name = "java_jsr305",
    artifact = "com.google.code.findbugs:jsr305:3.0.2",
    sha256 = "766ad2a0783f2687962c8ad74ceecc38a28b9f72a2d085ee438b7813e928d0c7",
)

maven_jar(
    name = "java_slf4j_api",
    artifact = "org.slf4j:slf4j-api:1.7.32",
    sha256 = "3624f8474c1af46d75f98bc097d7864a323c81b3808aa43689a6e1c601c027be",
)

maven_jar(
    name = "java_saxon_he",
    artifact = "net.sf.saxon:Saxon-HE:12.5",
    sha256 = "98c3a91e6e5aaf9b3e2b37601e04b214a6e67098493cdd8232fcb705fddcb674",
)

maven_jar(
    name = "java_xmlresolver",
    artifact = "org.xmlresolver:xmlresolver:5.2.2",
    sha256 = "efc92bd7ed32b3e57095e0b3e872051ccfbbdcc980831ef33e89e38161a85222",
)

maven_jar(
    name = "java_javatuples",
    artifact = "org.javatuples:javatuples:1.2",
    sha256 = "2eda5b19d9820e1cc2f69fcd01639a715a673c11f8507e3d1ed593cf765d5e0a",
)

# ----------------------- Lua packages ---------------------------------------------------

http_file(
    name = "lua_protobuf",
    downloaded_file_path = "protobuf-1.1.2-0.src.rock",
    sha256 = "bae53a6fdfef5e7e99fc7db07eb958002878c768b2951af93e47f40da1724005",
    url = "https://github.com/djungelorm/protobuf-lua/releases/download/v1.1.2/protobuf-1.1.2-0.src.rock",
)

http_file(
    name = "lua_luasocket",
    downloaded_file_path = "luasocket-3.0rc1-2.src.rock",
    sha256 = "3882f2a1e1c6145ceb43ead385b861b97fa2f8d487e8669ec5b747406ab251c7",
    url = "https://luarocks.org/manifests/luasocket/luasocket-3.0rc1-2.src.rock",
)

http_file(
    name = "lua_luafilesystem",
    downloaded_file_path = "luafilesystem-1.9.0-1.src.rock",
    sha256 = "3de68d619f6ad95a27f4728814375447d921305194b7050dee6199057c31282f",
    url = "https://luarocks.org/manifests/hisham/luafilesystem-1.9.0-1.src.rock",
)

http_file(
    name = "lua_penlight",
    downloaded_file_path = "penlight-1.15.0-1.src.rock",
    sha256 = "ba138b8bbc916f42adb5b876c48d254114f416e8867902f8c34fea2788140973",
    url = "https://luarocks.org/manifests/tieske/penlight-1.15.0-1.src.rock",
)

http_file(
    name = "lua_luaunit",
    downloaded_file_path = "luaunit-3.3-1.src.rock",
    sha256 = "dd0629d14f63b00774f3e2808d980a98912eabbae10422a3b3c2884e0c7182bf",
    url = "https://luarocks.org/manifests/bluebird75/luaunit-3.3-1.src.rock",
)

# ----------------------- Python packages ------------------------------------------------
#
# Python dependencies come from the pip hub (see the pip.parse above and
# tools/build/python/requirements.in). The pin below is only used by the
# protoc lua and nanopb plugin environments (see tools/build/protobuf).

http_file(
    name = "python_protobuf",
    downloaded_file_path = "protobuf-7.35.1.tar.gz",
    sha256 = "ce115a26fe0c39a2c29973d914d327e516a6455464489fe3cd1e51a1b354f81a",
    url = "https://files.pythonhosted.org/packages/da/01/9ef0afd7999eb9badb3a768b4aedd78c86d4c65cfaf1958ab276199e76b4/protobuf-7.35.1.tar.gz",
)

# ----------------------- Module Manager -------------------------------------------------

http_file(
    name = "module_manager",
    downloaded_file_path = "ModuleManager.4.2.3.dll",
    sha256 = "95847827ab293b9e82a19b7efb97ffea3e98cc03b181862536ac8eb572e30d7d",
    url = "https://ksp.sarbian.com/jenkins/job/ModuleManager/163/artifact/ModuleManager.4.2.3.dll",
)

# ----------------------- Third-party mods (integration testing) -------------------------
# The RemoteTech, InfernalRobotics and KerbalAlarmClock services wrap these mods. They are
# installed into GameData by `krpc-install --mods=...` for the integration tests, and are
# not part of the release. Each filegroup exports only the mod's own GameData subtree (the
# RemoteTech archive also bundles an older ModuleManager, which is deliberately excluded).

http_archive(
    name = "remotetech",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/RemoteTech/**']), visibility = ['//visibility:public'])",
    sha256 = "cd425571cedd4256444aaa23dcbd5f2bf581ca61f132ec2f04643cefe92f65f4",
    url = "https://github.com/RemoteTechnologiesGroup/RemoteTech/releases/download/1.9.12/RemoteTech-1.9.12.zip",
)

http_archive(
    name = "infernal_robotics",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/MagicSmokeIndustries/**']), visibility = ['//visibility:public'])",
    sha256 = "7e5819e06909c86e7cc117fb89582727ee9b8dfe169882e12835fa1929c59052",
    url = "https://github.com/meirumeiru/InfernalRobotics/releases/download/v3.1.22/InfernalRobotics_v3.1.22.zip",
)

http_archive(
    name = "kerbal_alarm_clock",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/TriggerTech/**']), visibility = ['//visibility:public'])",
    sha256 = "5fbaf7a1c69dec68557f4ce956e0f85956e66ffd828545914f23b79024fc3d67",
    url = "https://github.com/TriggerAu/KerbalAlarmClock/releases/download/v3.14.0.0/KerbalAlarmClock_3.14.0.0.zip",
)
