module(name = "krpc")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "2.0.3")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "protobuf", version = "35.1")
bazel_dep(name = "rules_dotnet", version = "0.22.1")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.422")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

# LLVM toolchain for the C/C++ clients (compiler + clang-format/clang-tidy). Two
# variants: a hermetic download (the default, used on dev) and a system install
# (used in CI via `--config=system-llvm`, which avoids the ~2 GB download). Switch
# with `--//tools/build/llvm:toolchain=system` (see .bazelrc + tools/build/llvm).
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

# Hermetic (downloads the LLVM release) -- registered as the default toolchain.
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "20.1.3",
)

# System (no download; toolchains_llvm resolves clang from an existing install).
# The path is the apt.llvm.org clang-20 layout baked into the buildenv image; it
# only exists inside the container, and is only used when `--config=system-llvm`
# opts in via --extra_toolchains, so dev checkouts are unaffected.
llvm.toolchain(
    name = "llvm_system",
    llvm_version = "20.1.3",
)
llvm.toolchain_root(
    name = "llvm_system",
    path = "/usr/lib/llvm-20",
)

# Path-mode generates only the config repo (@llvm_system); there is no downloaded
# @llvm_system_llvm binaries repo, so the clang-tidy/clang-format labels for system
# mode come from wrapper scripts in //tools/build/llvm, not from here.
use_repo(llvm, "llvm_system", "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "rules_jvm_external", version = "7.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.protobuf:protobuf-java:4.35.1",
        "com.puppycrawl.tools:checkstyle:10.26.1",
        "junit:junit:4.13.2",
        "org.hamcrest:hamcrest:3.0",
        "org.javatuples:javatuples:1.2",
    ],
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven", "unpinned_maven")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//tools/build/python:requirements_lock.txt",
)
use_repo(pip, "pypi")

http_archive(
    name = "com_google_googletest",
    sha256 = "65fab701d9829d38cb77c14acdc431d2108bfdbf8979e40eb8ae567edf10b27c",
    strip_prefix = "googletest-1.17.0",
    url = "https://github.com/google/googletest/archive/refs/tags/v1.17.0.tar.gz",
)

# ----------------------- KSP libraries --------------------------------------------------

# Stripped KSP assemblies to compile the mod against, downloaded from the ksp-lib
# repo. The archive lays the managed DLLs out under KSP_Data/Managed/; the build
# references them via //tools/build/ksp. Keep the version in step with
# config.bzl's ksp_version_*.
http_archive(
    name = "ksp",
    build_file_content = "exports_files(glob(['KSP_Data/Managed/*.dll']))",
    sha256 = "e3de286fd4bf2993e23cc996a8fe3426aa575ea0a296376b43dd2fe289826ad8",
    url = "https://github.com/krpc/ksp-lib/raw/main/ksp/ksp-1.12.5.zip",
)

# ----------------------- Protobuf Compiler ----------------------------------------------

http_archive(
    name = "protoc_linux_x86_32",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "5bc75055633c906881c2c32de927d160ec415d0de70ed0a3acc3dd4fed0427b8",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v35.1/protoc-35.1-linux-x86_32.zip",
)

http_archive(
    name = "protoc_linux_x86_64",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "6930ebf62bd4ea607b98fff052596c6ee564b9835b4ce172c75a3f53ae9d91b7",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v35.1/protoc-35.1-linux-x86_64.zip",
)

http_archive(
    name = "protoc_osx_x86_64",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "537d73604a344ded6fc94e98e07e529d4fe3e4a0b09e59905353950fafc2a1f7",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v35.1/protoc-35.1-osx-x86_64.zip",
)

http_archive(
    name = "protoc_win32",
    build_file_content = "exports_files(['bin/protoc.exe'])",
    sha256 = "e0c1b5be94c0de8ecd1f4d509bdfb344e6464e68ada27c039113dd474b318c51",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v35.1/protoc-35.1-win32.zip",
)

http_archive(
    name = "protoc_unity_linux_x86_32",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "d047b4b4a5ac424d7e8a58912a5712195d2ea31570a4d95bb21cf9b19c6bb0b9",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protoc-3.10.1-linux-x86_32.zip",
)

http_archive(
    name = "protoc_unity_linux_x86_64",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "0c97a75c8f8fafc55323599053626a0a822e5b66299f6643a2b086f859b56afd",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protoc-3.10.1-linux-x86_64.zip",
)

http_archive(
    name = "protoc_unity_osx_x86_64",
    build_file_content = "exports_files(['bin/protoc'])",
    sha256 = "ee3f4051e55830596729efe48183218bdb44cf2f83b188460859bd63b2a09576",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protoc-3.10.1-osx-x86_64.zip",
)

http_archive(
    name = "protoc_unity_win32",
    build_file_content = "exports_files(['bin/protoc.exe'])",
    sha256 = "964f055db26372e46d8232a09fe6d661de3ca1b82fbbc1ede33696b1e379a11b",
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protoc-3.10.1-win32.zip",
)

http_archive(
    name = "protoc_nanopb",
    build_file_content = "filegroup(name = 'plugin', srcs = glob(['generator/**']), visibility = ['//visibility:public'])",
    sha256 = "951a9ab2385424a4cdf245d0c84f4c88c6ccbc65a0dade4b246d50c068f24128",
    strip_prefix = "nanopb-0.4.9.1-linux-x86",
    url = "https://jpa.kapsi.fi/nanopb/download/nanopb-0.4.9.1-linux-x86.tar.gz",
)

http_archive(
    name = "protoc_lua",
    build_file_content = """
filegroup(
    name = 'plugin',
    srcs = [
        'protoc-plugin/protoc-gen-lua'
    ],
    visibility = ['//visibility:public']
)""",
    sha256 = "28f4daa026effb81cebfdf580b0fc5732e520c0f4ade53e940052d89cddf4264",
    strip_prefix = "protobuf-lua-1.1.2",
    url = "https://github.com/djungelorm/protobuf-lua/archive/v1.1.2.tar.gz",
)

# ----------------------- C# dependencies ------------------------------------------------

http_archive(
    name = "csharp_protobuf",
    build_file_content = "exports_files(['lib/net45/Google.Protobuf.dll', 'lib/net5.0/Google.Protobuf.dll'])",
    sha256 = "6ba51589915e3640e1ffdd384863dd0d73f0ca6a8aac591ec81c42c6a3ee55ce",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Google.Protobuf/3.35.1",
)

# Note: KSP's version of Unity does not include ReadOnlySpan and others, which are required
# by Google.Protobuf after v3.10.1, so we pin it to this version
http_archive(
    name = "csharp_protobuf_unity",
    build_file_content = "exports_files(['lib/net45/Google.Protobuf.dll'])",
    sha256 = "17eb7c37e702750d3aa53823571be7662a87a2111c6b2c844ba1c20641424084",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Google.Protobuf/3.10.1",
)

http_archive(
    name = "csharp_system_memory",
    build_file_content = "exports_files(['lib/net462/System.Memory.dll'])",
    sha256 = "26078aeb758c9ae985e8bf851f973026061da6a5eb4837204d0c2d2204c72955",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/System.Memory/4.6.3",
)

http_archive(
    name = "csharp_system_threading_tasks_extensions",
    build_file_content = "exports_files(['lib/net462/System.Threading.Tasks.Extensions.dll'])",
    sha256 = "1abc92c7517a021ead7e79d0b7f3c70be75bce0fac7cfe3b38e157d32245ff1a",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/System.Threading.Tasks.Extensions/4.6.3",
)

http_archive(
    name = "csharp_system_runtime_compilerservices_unsafe",
    build_file_content = "exports_files(['lib/net462/System.Runtime.CompilerServices.Unsafe.dll'])",
    sha256 = "5f6a7f53af3465f92beb6da873ebe0e496206c313313b98badee4355a6b25937",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/System.Runtime.CompilerServices.Unsafe/6.1.2",
)

http_file(
    name = "csharp_krpc_io_ports",
    downloaded_file_path = "KRPC.IO.Ports.dll",
    sha256 = "558b0c1649fbc44b518d9de8957fe30e7c9c42d73c62d63d165f6f136fab3ec5",
    url = "https://github.com/krpc/krpc-io-ports/releases/download/v1.0.0/KRPC.IO.Ports.dll",
)

http_file(
    name = "csharp_krpc_io_ports_license",
    downloaded_file_path = "LICENSE.KRPC.IO.Ports",
    sha256 = "a6b8912947cb14e02cefb704859d12a03d3c8792344fcf5831ef27c1efcd6d20",
    url = "https://raw.githubusercontent.com/krpc/krpc-io-ports/master/LICENSE",
)

http_archive(
    name = "csharp_moq",
    build_file_content = "exports_files(['lib/net462/Moq.dll', 'lib/net6.0/Moq.dll'])",
    sha256 = "fae01cffac6dce28fd627999ae167073ee2f520c7a729a59b164258b708643ca",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Moq/4.20.72",
)

http_archive(
    name = "csharp_castle_core",
    build_file_content = "exports_files(['lib/net462/Castle.Core.dll', 'lib/net6.0/Castle.Core.dll'])",
    sha256 = "b8d7bffcf0a76062e1c714292c3c9342ea081f9bbb7460e5ca3736c2a010e03e",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Castle.Core/5.2.1",
)

http_archive(
    name = "csharp_json",
    build_file_content = "exports_files(['lib/net45/Newtonsoft.Json.dll', 'lib/net6.0/Newtonsoft.Json.dll'])",
    sha256 = "f09081d457405baf35a973fa0c50d6bf272ed683f2568c5a620a49da952f6529",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/Newtonsoft.Json/13.0.4",
)

# System.IO.Ports is the serial port implementation used on modern .NET
# (net8.0 builds of the server core and TestServer). The mod's net472 build
# uses KRPC.IO.Ports, as mono inside KSP has no System.IO.Ports support.
http_archive(
    name = "csharp_system_io_ports",
    build_file_content = "exports_files(['lib/net8.0/System.IO.Ports.dll', 'runtimes/unix/lib/net8.0/System.IO.Ports.dll', 'runtimes/win/lib/net8.0/System.IO.Ports.dll'])",
    sha256 = "1bc8fd7347ab07365f2405655b4f17a04e7c80f862356244efcb056815767b84",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/System.IO.Ports/8.0.0",
)

http_archive(
    name = "csharp_system_io_ports_native_linux_x64",
    build_file_content = "exports_files(['runtimes/linux-x64/native/libSystem.IO.Ports.Native.so'])",
    sha256 = "e38a2e8d21e1734365d960af2d891272b032a8d0256c67ce9e5ccfc02a1fc250",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.linux-x64.runtime.native.System.IO.Ports/8.0.0",
)

http_archive(
    name = "csharp_options",
    build_file_content = "exports_files(['lib/NDesk.Options.dll'])",
    sha256 = "0fa76d0ed1eb9fba757b0aa677903e1b8873735eec136a51dde24eda57d10c61",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/NDesk.Options/0.2.1",
)

# ----------------------- C++ dependencies -----------------------------------------------

http_archive(
    name = "cpp_asio",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = 'asio',
    hdrs = glob(['include/*', 'include/**/*']),
    includes = ['include'],
    visibility = ['//visibility:public']
)
""",
    sha256 = "5cf78ede456fd13b95fe692711f4f689be26c826f1f5541c7a1df3aa32bd9dbd",
    strip_prefix = "asio-asio-1-38-0",
    url = "https://github.com/chriskohlhoff/asio/archive/refs/tags/asio-1-38-0.tar.gz",
)

http_archive(
    name = "cpp_googletest",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = 'gtest',
    srcs = glob(['googletest/src/*.cc'], exclude = ['googletest/src/gtest-all.cc']),
    hdrs = glob(['**/*.h', 'googletest/src/*.cc']),
    includes = [
        './',
        'googletest',
        'googletest/include',
        'include'
    ],
    linkopts = select({
        '@platforms//os:windows': [],
        '//conditions:default': ['-pthread'],
    }),
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gmock',
    srcs = glob(['googlemock/src/*.cc'], exclude = ['googlemock/src/gmock-all.cc']),
    hdrs = glob(['**/*.h', 'googlemock/src/*.cc']),
    includes = [
        './',
        'googlemock',
        'googlemock/include',
        'include'
    ],
    deps = [':gtest'],
    linkopts = select({
        '@platforms//os:windows': [],
        '//conditions:default': ['-pthread'],
    }),
    visibility = ['//visibility:public'],
)
""",
    sha256 = "65fab701d9829d38cb77c14acdc431d2108bfdbf8979e40eb8ae567edf10b27c",
    strip_prefix = "googletest-1.17.0",
    url = "https://github.com/google/googletest/archive/refs/tags/v1.17.0.tar.gz",
)

# ----------------------- C-nano dependencies --------------------------------------------

http_archive(
    name = "c_nanopb",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files([
    'LICENSE.txt', 'pb.h', 'pb_common.h', 'pb_common.c', 'pb_encode.h', 'pb_encode.c', 'pb_decode.h', 'pb_decode.c'
])

cc_library(
    name = 'nanopb',
    srcs = ['pb.h', 'pb_common.h', 'pb_common.c', 'pb_encode.h', 'pb_encode.c', 'pb_decode.h', 'pb_decode.c'],
    hdrs = ['pb.h', 'pb_common.h', 'pb_encode.h', 'pb_decode.h'],
    includes = ['./'],
    include_prefix = 'krpc_cnano', # FIXME: don't do this here
    visibility = ['//visibility:public']
)

filegroup(
    name = 'srcs',
    srcs = glob(['*.h', '*.c']),
    visibility = ['//visibility:public']
)
""",
    sha256 = "951a9ab2385424a4cdf245d0c84f4c88c6ccbc65a0dade4b246d50c068f24128",
    strip_prefix = "nanopb-0.4.9.1-linux-x86",
    url = "https://jpa.kapsi.fi/nanopb/download/nanopb-0.4.9.1-linux-x86.tar.gz",
)

# ----------------------- Java dependencies ----------------------------------------------
#
# Java dependencies come from rules_jvm_external (see maven.install above),
# locked in maven_install.json; repin with:
#   RULES_JVM_EXTERNAL_REPIN=1 bazel run @unpinned_maven//:pin

# ----------------------- Lua packages ---------------------------------------------------

http_file(
    name = "lua_protobuf",
    downloaded_file_path = "protobuf-1.1.2-0.src.rock",
    sha256 = "bae53a6fdfef5e7e99fc7db07eb958002878c768b2951af93e47f40da1724005",
    url = "https://github.com/djungelorm/protobuf-lua/releases/download/v1.1.2/protobuf-1.1.2-0.src.rock",
)

http_file(
    name = "lua_luasocket",
    downloaded_file_path = "luasocket-3.0rc1-2.src.rock",
    sha256 = "3882f2a1e1c6145ceb43ead385b861b97fa2f8d487e8669ec5b747406ab251c7",
    url = "https://luarocks.org/manifests/luasocket/luasocket-3.0rc1-2.src.rock",
)

http_file(
    name = "lua_luafilesystem",
    downloaded_file_path = "luafilesystem-1.9.0-1.src.rock",
    sha256 = "3de68d619f6ad95a27f4728814375447d921305194b7050dee6199057c31282f",
    url = "https://luarocks.org/manifests/hisham/luafilesystem-1.9.0-1.src.rock",
)

http_file(
    name = "lua_penlight",
    downloaded_file_path = "penlight-1.15.0-1.src.rock",
    sha256 = "ba138b8bbc916f42adb5b876c48d254114f416e8867902f8c34fea2788140973",
    url = "https://luarocks.org/manifests/tieske/penlight-1.15.0-1.src.rock",
)

http_file(
    name = "lua_luaunit",
    downloaded_file_path = "luaunit-3.3-1.src.rock",
    sha256 = "dd0629d14f63b00774f3e2808d980a98912eabbae10422a3b3c2884e0c7182bf",
    url = "https://luarocks.org/manifests/bluebird75/luaunit-3.3-1.src.rock",
)

# ----------------------- Module Manager -------------------------------------------------

http_file(
    name = "module_manager",
    downloaded_file_path = "ModuleManager.4.2.3.dll",
    sha256 = "95847827ab293b9e82a19b7efb97ffea3e98cc03b181862536ac8eb572e30d7d",
    url = "https://ksp.sarbian.com/jenkins/job/ModuleManager/163/artifact/ModuleManager.4.2.3.dll",
)

# ----------------------- Third-party mods (integration testing) -------------------------
# The RemoteTech, InfernalRobotics and KerbalAlarmClock services wrap these mods, and the
# SpaceCenter Parachute class wraps RealChute. They are installed into GameData by
# `krpc-install --mods=...` for the integration tests, and are not part of the release. Each
# filegroup exports only the mod's own GameData subtree (the RemoteTech archive also bundles
# an older ModuleManager, which is deliberately excluded).

http_archive(
    name = "remotetech",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/RemoteTech/**']), visibility = ['//visibility:public'])",
    sha256 = "cd425571cedd4256444aaa23dcbd5f2bf581ca61f132ec2f04643cefe92f65f4",
    url = "https://github.com/RemoteTechnologiesGroup/RemoteTech/releases/download/1.9.12/RemoteTech-1.9.12.zip",
)

http_archive(
    name = "infernal_robotics",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/MagicSmokeIndustries/**']), visibility = ['//visibility:public'])",
    sha256 = "7e5819e06909c86e7cc117fb89582727ee9b8dfe169882e12835fa1929c59052",
    url = "https://github.com/meirumeiru/InfernalRobotics/releases/download/v3.1.22/InfernalRobotics_v3.1.22.zip",
)

http_archive(
    name = "kerbal_alarm_clock",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/TriggerTech/**']), visibility = ['//visibility:public'])",
    sha256 = "5fbaf7a1c69dec68557f4ce956e0f85956e66ffd828545914f23b79024fc3d67",
    url = "https://github.com/TriggerAu/KerbalAlarmClock/releases/download/v3.14.0.0/KerbalAlarmClock_3.14.0.0.zip",
)

http_archive(
    name = "realchute",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/RealChute/**']), visibility = ['//visibility:public'])",
    sha256 = "3b135ae03d2214d4721a655e2d63e7c93c9a69558d8eae2473fced2bbf92bdf0",
    url = "https://github.com/ChrisViral/RealChute/releases/download/v1.4.9.5/RealChute_v1.4.9.5.zip",
)

# RealChute's plugin assembly hard-depends on ClickThroughBlocker and ToolbarControl, so its
# part modules do not register unless both are installed alongside it; ClickThroughBlocker in
# turn references Harmony, whose absence otherwise crashes kRPC's assembly scanner at startup.
# All three are installed only as RealChute's dependencies, not requested on their own.
http_archive(
    name = "harmony",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/000_Harmony/**']), visibility = ['//visibility:public'])",
    sha256 = "51d63f6739eaf22f12ce9456adace54385520c67cc13735d5300d5aa15c79476",
    url = "https://github.com/KSPModdingLibs/HarmonyKSP/releases/download/2.2.1.0/HarmonyKSP_2.2.1.0_for_KSP1.8%2B.zip",
)

http_archive(
    name = "clickthroughblocker",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/000_ClickThroughBlocker/**']), visibility = ['//visibility:public'])",
    sha256 = "83bf6c3556a7d2c46634260100a535f1ccda99f83fc999c846b45a93c6369e3e",
    url = "https://github.com/linuxgurugamer/ClickThroughBlocker/releases/download/2.1.10.23/ClickThroughBlocker-1.12.5-2.1.10.23.zip",
)

http_archive(
    name = "toolbarcontrol",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/001_ToolbarControl/**']), visibility = ['//visibility:public'])",
    sha256 = "0f44f5500f8e914346cb2e6dd5c5e5f26df9f26caa6ce8179738a3842aac2a5b",
    url = "https://github.com/linuxgurugamer/ToolbarControl/releases/download/0.1.9.14/ToolbarControl-1.12.0-0.1.9.14.zip",
)

# DMagic's science part module, wrapped by the SpaceCenter Experiment class. This standalone
# release is just the part-module assembly with no parts and no dependencies; a test-only part
# config in tools/mods/config/DMagicScienceAnimate adds a part that uses it, so the DMagic code
# path is exercised by the integration tests.
http_archive(
    name = "dmagic_science_animate",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/DMagicScienceAnimate/**']), visibility = ['//visibility:public'])",
    sha256 = "a4821a1d76ddf0757b57a383bd4c76c153851159d533f7bcf31f1b74401d9b60",
    url = "https://github.com/DMagic1/DMModuleScienceAnimateGeneric/releases/download/v0.23/DMModuleScienceAnimateGeneric_v0.23.zip",
)

# Action Groups Extended, whose action-group compatibility is wrapped by the SpaceCenter Control
# class. Its part.cfg is a ModuleManager patch adding a ModuleAGX module to every part (no new
# part of its own); it shares RealChute's ClickThroughBlocker + ToolbarControl + Harmony
# dependencies and additionally references KSP_Log from SpaceTuxLibrary, whose absence throws a
# BadImageFormatException when its toolbar registration loads.
http_archive(
    name = "agext",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/Diazo/**']), visibility = ['//visibility:public'])",
    sha256 = "fa5f56288165321775c96674a1b64e49c353ccfec57fd4d7979afb1c1005f7aa",
    url = "https://github.com/linuxgurugamer/AGExt/releases/download/2.4.1.4/AGExt-1.12.0-2.4.1.4.zip",
)

# SpaceTuxLibrary — LinuxGuruGamer's shared library bundle (KSP_Log, etc.), an AGExt dependency.
http_archive(
    name = "spacetuxlibrary",
    build_file_content = "filegroup(name = 'gamedata', srcs = glob(['GameData/SpaceTuxLibrary/**']), visibility = ['//visibility:public'])",
    sha256 = "e916b6907e8310e08baa49532d04f92068864cb38b93afd664bf712b190197f1",
    url = "https://github.com/linuxgurugamer/SpaceTuxLibrary/releases/download/0.0.9/SpaceTuxLibrary-1.12.0-0.0.9.zip",
)
